force-app/main/default/objects/Shift_Update_Platform_Event__e/Shift_Update_Platform_Event__e.object-meta.xml
<CustomObject>
    <label>Shift Update Platform Event</label>
    <pluralLabel>Shift Update Platform Events</pluralLabel>
</CustomObject>