force-app/main/default/objects/Shift_Update_Platform_Event__e/fields/Service_Resource_Old__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_Old__c</fullName>
    <label>Service Resource Old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>