force-app/main/default/objects/Shift_Update_Platform_Event__e/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <label>Service Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>